2012-02-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/functions_form.php
	operation/projects/task_detail.php
	operation/side_menu.php
	operation/users/user_spare_workunit.php: Fixed ACLs to 
	create task workunits. 
	Add ACL controls in ACLs details 
	to hide update/create buttons when no permission. 
	Add control over user roles when create a task workunit 
	to show in combo only the roles of this project

2012-02-01  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	include/functions_db.php
	operation/contracts/contract_detail.php
	operation/inventories/inventory_detail.php: Added the 
	company to few views of contract

2012-02-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php
	operation/incidents/incident.php
	operation/incidents/incident_search.php
	operation/contracts/contract_detail.php
	operation/user_report/report_monthly.php
	godmode/usuarios/lista_usuarios.php: added user company
	to search and side menu on incidents and added editor to 
	private contacts

2012-02-01  Sergio Martin <sergio.martin@artica.es>

	* operation/search.php: Fix a typo

	* upgrade_to_3.0.sql
	upgrade_to_3.0.sql: Added fields to database 
	to assign a user to a company, active simple 
	interface mode and private contracts

	* operation/users/user_edit.php
	integria_db.sql
	godmode/usuarios/configurar_usuarios.php
	godmode/usuarios/lista_usuarios.php: Added setup 
	configuration to assign a user to a company and the
	simple interface mode configuration. Clean the mess
	of user edition code

2012-01-31  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_report.php: Fixed some ugly formatting

	* operation/search.php: Fixed ACLs on people search. Added link to
	montly report from here.

2012-01-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_inventories.php
	include/functions_db.php
	operation/side_menu.php
	operation/contracts/contract_detail.php